--- a/minigames/cps/index.html
+++ b/minigames/cps/index.html
@@ -10,8 +10,7 @@
 
   <body>
     <header>
-      what length?
-      <p>pause.</p>
+      select duration
     </header>
     <!-- duration selection -->
     <div id="time-selection">
