Add new minigame to hub

--- a/index.html
+++ b/index.html
@@ -21,22 +21,34 @@
         margin: 15px;
         padding: 10px 20px;
         background-color: rosybrown;
-        color: white;
+        color: aliceblue;
         text-decoration: none;
         border-radius: 5px;
         font-size: 1.2em;
       }
       .game-link:hover {
-        background-color: #45a049;
+        background-color: lavenderblush;
+        color: darksalmon;
       }
     </style>
   </head>
   <body>
-    <h1>Welcome to My Minigames Hub</h1>
-    <a href="minigames/count_clicker/index.html" class="game-link"
-      >count clicker</a
-    >
+    <h1>Welcome to My Minigames Hub!</h1>
+    <div>
+      <a href="minigames/count_clicker/index.html" class="game-link"
+        >count clicker</a
+      >
+    </div>
     <a href="minigames/cps/index.html" class="game-link">cps tester</a>
     <a href="minigames/aim_trainer/index.html" class="game-link">aim trainer</a>
+
+    <div>
+      <a href="minigames/number_memory/index.html" class="game-link"
+        >number memory</a
+      >
+    </div>
+
+    <!-- placeholder -->
+    <!-- <a href="minigames/[directory]/index.html" class="game-link">[game]</a> -->
   </body>
 </html>
