--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
     <a href="minigames/aim_trainer/index.html" class="game-link">aim trainer</a>
 
     <div>
-      <a href="minigames/number_memory/index.html" class="game-link"
-        >number memory</a
-      >
+      <a href="minigames/number_memory/index.html" class="game-link">number memory</a>
+    </div>
+    <div>
+      <a href="highscore_database/templates/index.html" class="game-link">test database management</a>
     </div>
 
     <!-- placeholder -->
