Add naive reaction time minigame

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         >count clicker</a
       >
     </div>
-    <a href="minigames/cps/index.html" class="game-link">cps tester</a>
     <a href="minigames/aim_trainer/index.html" class="game-link">aim trainer</a>
+    <a href="minigames/cps/index.html" class="game-link">cps tester</a>
+    <a href="minigames/rt_trainer/index.html" class="game-link">reaction time trainer</a>
 
     <div>
       <a href="minigames/number_memory/index.html" class="game-link"
