--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       <a href="minigames/number_memory/index.html" class="game-link">number memory</a>
     </div>
     <div>
+      <a href="minigames/typing_practice_hub/index.html" class=game-link>typing practice</a>
+    </div>
+    <div>
       <a href="highscore_database/templates/index.html" class="game-link">test database management</a>
     </div>
 
