--- a/minigames/typing_practice_hub/typing_practice/uncommon_words/uncommon_words.html
+++ b/minigames/typing_practice_hub/typing_practice/uncommon_words/uncommon_words.html
@@ -12,6 +12,16 @@
       <a href="/typing_practice/hub/hub.html" class="home-button">gamemodes</a>
     </div>
     <h1>coming soon</h1>
+    <div>
+      <h3 id="intro-text">press enter to begin</h3>
+      <h3>
+        <div id="character-display"> <span id="word-to-enter">word</span> </div>
+      </h3>
+    </div>
+    <div>
+      <input type="text" id="text-box"></input>
+
+    <p id="highscore-display">highscore: (functionality coming soon)</p>
   </body>
   <script src="uncommon_words.js"></script>
 </html>
