--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
   <body>
     <h1>Welcome to My Minigames Hub!</h1>
     <div>
-      <a href="minigames/count_clicker/index.html" class="game-link"
-        >count clicker</a
-      >
+      <a href="minigames/count_clicker/index.html" class="game-link">count clicker</a>
+      <a href="minigames/cookie_clicker/cookie_clicker.html" class="game-link">cookie clicker</a>
     </div>
     <a href="minigames/aim_trainer/index.html" class="game-link">aim trainer</a>
     <a href="minigames/rt_trainer/index.html" class="game-link">reaction time trainer</a>
