--- a/minigames/aim_trainer/aim_trainer.html
+++ b/minigames/aim_trainer/aim_trainer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.5" />
     <title>Aim Trainer</title>
-    <link rel="stylesheet" href="styles.css: />
+    <link rel="stylesheet" href="aim_trainer.css: />
 
   </head>
   <body>
@@ -26,6 +26,6 @@
     <div id="highest-accuracy">highest accuracy: 0%</div>
     <div id="highest-reaction-time">reaction time: poor</div>
 
-    <script src="script.js"></script>
+    <script src="aim_trainer.js"></script>
   </body>
 </html>
