--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
     <div>
       <a href="highscore_database/templates/index.html" class="game-link">test database management</a>
     </div>
+    <div>
+      <a href="discord_bots/hopecore_v1/browser_demo/index.html" class="game-link">hopecore demo</a>
+    </div>
 
     <!-- placeholder -->
     <!-- <a href="minigames/[directory]/index.html" class="game-link">[game]</a> -->
