--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <div>
       <a href="discord_bots/hopecore_v1/browser_demo/index.html" class="game-link">hopecore demo</a>
     </div>
+    <div><a href="discord_bots/test_img_gen/index.html" class="game-link">image generation demo</a></div>
 
     <!-- placeholder -->
     <!-- <a href="minigames/[directory]/index.html" class="game-link">[game]</a> -->
