--- a/discord_bots/test_img_gen/index.html
+++ b/discord_bots/test_img_gen/index.html
@@ -14,7 +14,7 @@
     <script>
       document.getElementById("load-image").addEventListener("click", () => {
         const imagePath =
-          "assets/daily-reminder-that-you-will-have-this/IMG_1047.png";
+          "assets/daily-reminder-that-you-will-have-this/IMG_1047.PNG";
 
         const imageElement = document.createElement("img");
         imageElement.src = imagePath;
