Add dark mode for count counter

--- a/minigames/count_clicker/index.html
+++ b/minigames/count_clicker/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <header>i am count counter!</header>
+    <button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button>
     <div id="counter-container">
       <h1 id="counter-display">0</h1>
       <button id="increment-btn">increment</button>
