Add toggle to cookie clicker

--- a/minigames/cookie_clicker/cookie_clicker.html
+++ b/minigames/cookie_clicker/cookie_clicker.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cookie Clicker</title>
-  <link rel="stylesheet" href="cookie_clicker.css"/>
+  <div><button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button></div>
+
+  <link rel="stylesheet" href="cookie_clicker.css" />
 </head>
+
 <body>
   <h1>Cookie Clicker</h1>
   <img id="cookie" src="cookie.png" alt="Cookie" />
@@ -13,4 +17,5 @@
 
   <script src="cookie_clicker.js"></script>
 </body>
+
 </html>
