--- a/minigames/cps/index.html
+++ b/minigames/cps/index.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>how clickly can you quick? wait...</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <header>
-      select duration
-    </header>
-    <!-- duration selection -->
-    <div id="time-selection">
-      <button class="duration-btn" data-time="5">5 seconds</button>
-      <button class="duration-btn" data-time="10">10 seconds</button>
-      <button class="duration-btn" data-time="60">1 minute</button>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>how clickly can you quick? wait...</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
 
-    <div id="time-left">Time Left: 10s</div>
+<body>
+  <div><button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button></div>
+  <header>
+    select duration
+  </header>
 
-    <!-- clickable box and label -->
-    <div id="label-container">
-      <h2 id="click-label">Test text</h2>
-    </div>
+  <!-- duration selection -->
+  <div id="time-selection">
+    <button class="duration-btn" data-time="5">5 seconds</button>
+    <button class="duration-btn" data-time="10">10 seconds</button>
+    <button class="duration-btn" data-time="60">1 minute</button>
+  </div>
 
-    <div id="click-container">
-      <h2 id="click-total">Clicks: 0</h2>
-      <button id="start-btn">BEGIN</button>
-    </div>
+  <div id="time-left">Time Left: 10s</div>
 
-    <!-- save or reset options -->
-    <div id="control-btns">
-      <button id="save-btn">save score?</button>
-      <button id="reset-btn">try again?</button>
-    </div>
+  <!-- clickable box and label -->
+  <div id="label-container">
+    <h2 id="click-label">Test text</h2>
+  </div>
 
-    <div id="high-score">High Score: 0</div>
+  <div id="click-container">
+    <h2 id="click-total">Clicks: 0</h2>
+    <button id="start-btn">BEGIN</button>
+  </div>
 
-    <script src="script.js"></script>
-  </body>
+  <!-- save or reset options -->
+  <div id="control-btns">
+    <button id="save-btn">save score?</button>
+    <button id="reset-btn">try again?</button>
+  </div>
+
+  <div id="high-score">High Score: 0</div>
+
+  <script src="script.js"></script>
+</body>
+
 </html>
