--- a/minigames/rt_trainer/index.html
+++ b/minigames/rt_trainer/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reaction Time Minigame</title>
-  </head>
-  <body>
-    <div class="game-area">
-      <h1>Reaction Time Minigame</h1>
-      <p id="instructions">Click "Start" to begin the game.</p>
-      <button id="start-btn">Start</button>
-      <div>
-        <button id="save-average-btn" class="hidden">Save Best Average</button>
-        <button id="save-best-btn" class="hidden">Save Best Time</button>
-      </div>
-      <p id="result" class="hidden">Results will appear here.</p>
-      <p id="stats" class="hidden">Stats will appear here.</p>
-    </div>
 
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="styles.css" />
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Reaction Time Minigame</title>
+</head>
+
+<body>
+  <div><button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button></div>
+  <div class="game-area">
+    <h1>Reaction Time Minigame</h1>
+    <p id="instructions">Click "Start" to begin the game.</p>
+    <button id="start-btn">Start</button>
+    <div>
+      <button id="save-average-btn" class="hidden">Save Best Average</button>
+      <button id="save-best-btn" class="hidden">Save Best Time</button>
+    </div>
+    <p id="result" class="hidden">Results will appear here.</p>
+    <p id="stats" class="hidden">Stats will appear here.</p>
+  </div>
+
+  <script src="script.js"></script>
+  <link rel="stylesheet" href="styles.css" />
+</body>
+
 </html>
