--- a/minigames/number_memory/index.html
+++ b/minigames/number_memory/index.html
@@ -1,102 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Number Memorization Game</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        color: aliceblue;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        margin: 0;
-        background-color: black;
-      }
 
-      .progress-bar-container {
-        width: 50dvw;
-        height: 20px;
-        background-color: #ccc;
-        border-radius: 10px;
-        overflow: hidden;
-        margin: 20px 0;
-        /* border: 15px solid red; */
-        z-index: 1000;
-        position: relative;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Number Memorization Game</title>
+</head>
+<link rel="stylesheet" href="styles.css" />
 
-      .progress-bar {
-        width: 100%;
-        height: 100%;
-        background-color: #4caf50;
-        transition: width 0.1s linear;
-      }
-
-      #start-timer {
-        margin-top: 6px;
-      }
-
-      #start-timer:hover {
-        background-color: black;
-        color: aliceblue;
-      }
-
-      #input {
-        width: 50vw;
-        height: 8vh;
-        font-size: 6vh;
-        text-align: center;
-      }
-
-      #check-button {
-        width: 18vw;
-        height: 6vh;
-        font-size: 3vh;
-        text-align: center;
-        margin-top: 7px;
-      }
-
-      #correct-text {
-        font-size: 20px;
-      }
-
-      #incorrect-text {
-        font-size: 20px;
-      }
-
-      #sequence {
-        align-items: center;
-      }
-    </style>
-  </head>
-  <body>
-    <h1 id="start-page">Click Start to Begin!</h1>
-    <span id="progress-bar-display">
-      <div class="progress-bar-container">
-        <div class="progress-bar" id="progress-bar"></div></div
-    ></span>
-
-    <h1 id="memorize-prompt">
-      Memorize the following number:
-      <div><span id="sequence">0</span></div>
-    </h1>
-
-    <h1 id="correct-text">Correct! Proceed when ready</h1>
-    <h1 id="incorrect-text">
-      That was incorrect. Your final score was: 6. Wanna try again?
-    </h1>
-    <div>
-      <button id="reset-button">try again?</button>
-      <button id="save-btn">save score?</button>
+<body>
+  <div><button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button></div>
+  <h1 id="start-page">Click Start to Begin!</h1>
+  <span id="progress-bar-display">
+    <div class="progress-bar-container">
+      <div class="progress-bar" id="progress-bar"></div>
     </div>
-    <button id="proceed-button">higher sequence?</button>
+  </span>
 
-    <button id="start-timer">Start</button>
+  <h1 id="memorize-prompt">
+    Memorize the following number:
+    <div><span id="sequence">0</span></div>
+  </h1>
 
-    <script src="script.js"></script>
-  </body>
+  <h1 id="correct-text">Correct! Proceed when ready</h1>
+  <h1 id="incorrect-text">
+    That was incorrect. Your final score was: 6. Wanna try again?
+  </h1>
+  <div>
+    <button id="reset-button">try again?</button>
+    <button id="save-btn">save score?</button>
+  </div>
+  <button id="proceed-button">higher sequence?</button>
+
+  <button id="start-timer">Start</button>
+
+  <script src="script.js"></script>
+</body>
+
 </html>
