Add toggle to pixel escape

--- a/minigames/pixel_escape/pixel_escape.html
+++ b/minigames/pixel_escape/pixel_escape.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pixel Escape</title>
-  </head>
-  <body>
-    <canvas id="gameCanvas" width="800" height="400"></canvas>
 
-    <script src="pixel_escape.js"></script>
-    <link rel="stylesheet" href="pixel_escape.css" />
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pixel Escape</title>
+</head>
+
+<body>
+  <div><button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button></div>
+
+  <canvas id="gameCanvas" width="800" height="400"></canvas>
+
+  <script src="pixel_escape.js"></script>
+  <link rel="stylesheet" href="pixel_escape.css" />
+</body>
+
 </html>
