--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
   <div>
     <a href="minigames/typing_practice_hub/hub.html" class="game-link">typing practice</a>
   </div>
-  <div>
+  <!-- <div>
     <a href="highscore_database/templates/index.html" class="game-link">test database management</a>
-  </div>
+  </div> -->
   <div>
     <a href="discord_bots/hopecore_v1/browser_demo/index.html" class="game-link">hopecore demo</a>
   </div>
-  <div>
+  <!-- <div>
     <a href="discord_bots/test_img_gen/index.html" class="game-link">image generation demo</a>
-  </div>
+  </div> -->
 
   <script>
     const themeToggle = document.getElementById("themeToggle");
