--- a/minigames/typing_practice_hub/typing_practice/uncommon_words/uncommon_words.html
+++ b/minigames/typing_practice_hub/typing_practice/uncommon_words/uncommon_words.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>uncommon words practice</title>
-    <link rel="stylesheet" href="uncommon_words.css" />
-  </head>
-  <body>
-    <div class="top-right">
-      <a href="/typing_practice/hub/hub.html" class="home-button">gamemodes</a>
-    </div>
-    <h1>coming soon</h1>
-    <div>
-      <h3 id="intro-text">press enter to begin</h3>
-      <h3>
-        <div id="character-display"> <span id="word-to-enter">word</span> </div>
-      </h3>
-    </div>
-    <div>
-      <input type="text" id="text-box"></input>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>uncommon words practice</title>
+  <link rel="stylesheet" href="uncommon_words.css" />
+</head>
+
+<body>
+  <div class="top-right">
+    <a href="../../hub.html" class="home-button">gamemodes</a>
+  </div>
+  <h1>coming soon</h1>
+  <div>
+    <h3 id="intro-text">(broken) press enter to begin</h3>
+    <h3>
+      <div id="character-display"> <span id="word-to-enter">word</span> </div>
+    </h3>
+  </div>
+  <div>
+    <input type="text" id="text-box"></input>
 
     <p id="highscore-display">highscore: (functionality coming soon)</p>
-  </body>
-  <script src="uncommon_words.js"></script>
+</body>
+<script src="uncommon_words.js"></script>
+
 </html>
