Dark/light mode for typing hub

--- a/minigames/typing_practice_hub/hub.html
+++ b/minigames/typing_practice_hub/hub.html
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>typing practice</title>
-    <link rel="stylesheet" href="styles.css?v=1.0" />
-  </head>
-  <body>
-    <h1>choose your gamemode</h1>
-  </body>
-  <div>
-    <a
-      href="typing_practice/special_characters/special_chars.html"
-      class="mode-link"
-      >special characters</a
-    >
-  </div>
-  <div>
-    <a
-      href="typing_practice/uncommon_words/uncommon_words.html"
-      class="mode-link"
-      >uncommon words</a
-    >
-  </div>
-  <div>
-    <a href="typing_practice/cs_lingo/cs_lingo.html" class="mode-link"
-      >computer science jargon</a
-    >
-  </div>
-  <div>
-    <a href="typing_practice/numbers/numbers.html" class="mode-link"
-      >numbers</a
-    >
-  </div>
-  <script src="script.js"></script>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>typing practice</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <div><button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button></div>
+  <h1>choose your gamemode</h1>
+</body>
+<div>
+  <a href="typing_practice/special_characters/special_chars.html" class="mode-link">special characters</a>
+</div>
+<div>
+  <a href="typing_practice/uncommon_words/uncommon_words.html" class="mode-link">uncommon words</a>
+</div>
+<div>
+  <a href="typing_practice/cs_lingo/cs_lingo.html" class="mode-link">computer science jargon</a>
+</div>
+<div>
+  <a href="typing_practice/numbers/numbers.html" class="mode-link">numbers</a>
+</div>
+<script src="script.js"></script>
+
 </html>
