--- a/minigames/pixel_escape/pixel_escape.html
+++ b/minigames/pixel_escape/pixel_escape.html
@@ -7,7 +7,7 @@
   <title>Pixel Escape</title>
 </head>
 
-<body>
+<body data-theme="dark">
   <div><button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button></div>
 
   <canvas id="gameCanvas" width="800" height="400"></canvas>
