--- a/index.html
+++ b/index.html
@@ -90,11 +90,14 @@
     <a href="highscore_database/templates/index.html" class="game-link">test database management</a>
   </div> -->
   <div>
+    <a href="minigames/pixel_escape/pixel_escape.html" class="game-link">pixel escape</a>
+  </div>
+  <div>
     <a href="discord_bots/hopecore_v1/browser_demo/index.html" class="game-link">hopecore demo</a>
   </div>
   <!-- <div>
     <a href="discord_bots/test_img_gen/index.html" class="game-link">image generation demo</a>
-  </div> -->
+  </div> -->pixel_escape.html
 
   <script>
     const themeToggle = document.getElementById("themeToggle");
