--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
   <div>
     <a href="minigames/typing_practice_hub/hub.html" class="game-link">typing practice</a>
   </div>
-  <!-- <div>
+  <div>
     <a href="highscore_database/templates/index.html" class="game-link">test database management</a>
-  </div> -->
+  </div>
   <div>
     <a href="minigames/pixel_escape/pixel_escape.html" class="game-link">pixel escape</a>
   </div>
@@ -97,7 +97,7 @@
   </div>
   <!-- <div>
     <a href="discord_bots/test_img_gen/index.html" class="game-link">image generation demo</a>
-  </div> -->pixel_escape.html
+  </div> -->
 
   <script>
     const themeToggle = document.getElementById("themeToggle");
