--- a/minigames/pixel_escape/pixel_escape.html
+++ b/minigames/pixel_escape/pixel_escape.html
@@ -12,7 +12,8 @@
 
   <canvas id="gameCanvas" width="800" height="400"></canvas>
 
-  <script src="pixel_escape.js"></script>
+  <script type="module" src="pixel_escape.js"></script>
+
   <link rel="stylesheet" href="pixel_escape.css" />
 </body>
 
