--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
   <div>
     <a href="minigames/number_memory/index.html" class="game-link">number memory</a>
+    <a href="minigames/percentage_calculation/index.html" class="game-link">percentage practice</a>
   </div>
   <div>
     <a href="minigames/typing_practice_hub/hub.html" class="game-link">typing practice</a>
@@ -97,6 +98,10 @@
   </div>
   <!-- <div>
     <a href="discord_bots/test_img_gen/index.html" class="game-link">image generation demo</a>
+  </div> -->
+<!--   <div>
+    
+    
   </div> -->
 
   <script>
