--- a/minigames/percentage_calculation/index.html
+++ b/minigames/percentage_calculation/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <button id="theme-toggle" class="theme-toggle">Switch to Dark Mode</button>
   <div class="game-container">
     <div class="question" id="question">Loading...</div>
     <div class="choices" id="choices"></div>
