Add score tracking element

--- a/minigames/percentage_calculation/index.html
+++ b/minigames/percentage_calculation/index.html
@@ -15,6 +15,7 @@
     <div class="choices" id="choices"></div>
     <div class="result" id="result"></div>
   </div>
+  <div class="score" id="score"></div>
 </body>
 
 <script src="script.js"></script>
