--- a/minigames/percentage_calculation/index.html
+++ b/minigames/percentage_calculation/index.html
@@ -10,12 +10,19 @@
 
 <body>
   <button id="theme-toggle" class="theme-toggle">Switch to Dark Mode</button>
-  <div class="game-container">
+  <div class="game-container" id="game-container">
     <div class="question" id="question">Loading...</div>
     <div class="choices" id="choices"></div>
     <div class="result" id="result"></div>
+    <div class="score" id="score"></div>
   </div>
-  <div class="score" id="score"></div>
+  <div class="end-screen" id="end-screen" style="display: none;">
+    <h2>Game Over!</h2>
+    <p id="final-score"></p>
+    <input type="text" id="player-name" placeholder="Enter your name" />
+    <button id="save-score">Save Score</button>
+    <button id="play-again">Play Again</button>
+  </div>
 </body>
 
 <script src="script.js"></script>
