--- a/minigames/number_memory/index.html
+++ b/minigames/number_memory/index.html
@@ -34,6 +34,13 @@
 
   <button id="start-timer">Start</button>
 
+  <div id="starting-length-container">
+    <label for="starting-length">Choose Starting Length:</label>
+    <input type="number" id="starting-length" min="1" max="20" value="6" />
+    <button id="set-length-button">Set Length</button>
+  </div>
+
+
   <script src="script.js"></script>
 </body>
 
