--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
   <div>
     <a href="minigames/typing_practice_hub/hub.html" class="game-link">typing practice</a>
   </div>
-  <div>
+<!--   <div>
     <a href="highscore_database/templates/index.html" class="game-link">test database management</a>
-  </div>
+  </div> -->
   <div>
     <a href="minigames/pixel_escape/pixel_escape.html" class="game-link">pixel escape</a>
   </div>
@@ -99,10 +99,9 @@
   <!-- <div>
     <a href="discord_bots/test_img_gen/index.html" class="game-link">image generation demo</a>
   </div> -->
-<!--   <div>
-    
-    
-  </div> -->
+  <div>
+    <a href="todo_webapp/index.html" class="game-link">todo list</a>
+  </div>
 
   <script>
     const themeToggle = document.getElementById("themeToggle");
