--- a/minigames/typing_practice_hub/typing_practice/uncommon_words/uncommon_words.html
+++ b/minigames/typing_practice_hub/typing_practice/uncommon_words/uncommon_words.html
@@ -15,7 +15,7 @@
   </div>
   <h1>coming soon</h1>
   <div>
-    <h3 id="intro-text">(broken) press enter to begin</h3>
+    <h3 id="intro-text">press enter to begin</h3>
     <h3>
       <div id="character-display"> <span id="word-to-enter">word</span> </div>
     </h3>
