Update Java questions

--- a/minigames/typing_practice_hub/typing_practice/cs_lingo/index.html
+++ b/minigames/typing_practice_hub/typing_practice/cs_lingo/index.html
@@ -48,7 +48,7 @@
         <h1>Select a Language</h1>
         <button onclick="startGame('Java')">Java</button>
         <button onclick="startGame('Python')">Python</button>
-        <button onclick="startGame('JavaScript')">JavaScript</button>
+        <button onclick="startGame('JS')">JavaScript</button>
         <button onclick="startGame('HTML & CSS')">HTML & CSS</button>
         <button onclick="startGame('Bash')">Bash</button>
     </div>
@@ -69,11 +69,10 @@
                 { question: "Java keyword to create a loop (not for):", answer: "while" },
                 { question: "Java keyword to create a loop (not while):", answer: "for" },
                 { question: "Java keyword for inheritance:", answer: "extends" },
+                { question: "Java keyword for implementing an interface:", answer: "implements" },
                 { question: "Java keyword for defining a method:", answer: "void" },
-                { question: "JavaScript method to add an event listener:", answer: "addEventListener()" },
-                { question: "JavaScript method to create a timeout:", answer: "setTimeout()" },
+                { question: "Java main method declaration:", answer: "public static void main" },
                 { question: "Java keyword to create an object instance:", answer: "new" },
-                { question: "JavaScript function to select an element by ID:", answer: "document.getElementById()" }
             ],
             "Python": [
                 { question: "Python command to print:", answer: "print()" },
@@ -87,7 +86,7 @@
                 { question: "Python function to get the length of a list:", answer: "len()" },
                 { question: "Python keyword for a conditional statement:", answer: "if" }
             ],
-            "JavaScript": [
+            "JS": [
                 { question: "JavaScript function to log output to console:", answer: "console.log()" },
                 { question: "JavaScript method to add an event listener:", answer: "addEventListener()" },
                 { question: "JavaScript method to create a timeout:", answer: "setTimeout()" },
