Update Java questions

--- a/minigames/typing_practice_hub/typing_practice/cs_lingo/index.html
+++ b/minigames/typing_practice_hub/typing_practice/cs_lingo/index.html
@@ -73,6 +73,7 @@
                 { question: "Java keyword for defining a method:", answer: "void" },
                 { question: "Java main method declaration:", answer: "public static void main" },
                 { question: "Java keyword to create an object instance:", answer: "new" },
+                { question: "Java class that handles user input:", answer: "Scanner" },
             ],
             "Python": [
                 { question: "Python command to print:", answer: "print()" },
