Update HTML for number typing minigame

--- a/minigames/typing_practice_hub/typing_practice/numbers/numbers.html
+++ b/minigames/typing_practice_hub/typing_practice/numbers/numbers.html
@@ -5,15 +5,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>uncommon words practice</title>
+  <title>numbers practice</title>
   <link rel="stylesheet" href="numbers.css" />
 </head>
 
 <body>
-  <div class="top-right">
-    <a href="../../hub.html" class="home-button">gamemodes</a>
+  <div><button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button></div>
+  <h1>gambare gambare</h1>
+  <!-- <div>
+      <button id="start-button">start</button>
+    </div> -->
+
+  <div>
+    <h3 id="intro-text">click into the box, then press enter to begin</h3>
+    <h3>
+      <div id="character-display"> <span id="char-to-enter">!</span> </div>
+    </h3>
   </div>
-  <h1>coming soon</h1>
+  <div>
+    <input type="text" id="text-box"></input>
+
+    <p id="highscore-display">highscore: (functionality coming soon)</p>
 </body>
 <script src="numbers.js"></script>
 
